add_subdirectory( BinaryMathematicalMorphology )
add_subdirectory( ImageGrid )
add_subdirectory( ImageFeature )
add_subdirectory( FastMarching )
add_subdirectory( Colormap )
add_subdirectory( ImageIntensity )
add_subdirectory( ImageFilterBase )
add_subdirectory( Thresholding )
add_subdirectory( QuadEdgeMeshFiltering )
add_subdirectory( ImageCompare )
add_subdirectory( MathematicalMorphology )
add_subdirectory( Smoothing )
add_subdirectory( ImageGradient )
add_subdirectory( AnisotropicSmoothing )
